--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/react-webpack5": "^7.0.10",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.2.6",
+    "@types/styled-components": "^5.1.26",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,5 +39,9 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "styled-components": "^5.3.1-pr3564",
+    "styled-system": "^5.1.5"
+  }
 }
