--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.2.6",
     "@types/styled-components": "^5.1.26",
+    "@types/styled-system": "^5.1.16",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "storybook": "^7.0.10",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
